# voxo

./: .gitattributes  .gitignore  README.md  check.sh  pyproject.toml
resources/models/: dwarf.txt  truck_plane.txt
resources/programs/: blitter.glsl  clearer.glsl  cube_simple.glsl  debug_occluder.glsl  debug_texture_viewer_preview.glsl  gbuffer_create.glsl  gbuffer_debug.glsl  gbuffer_lighting.glsl  occluder_mipmapper.glsl  pcg_random.glsl  postprocessing.glsl  random.glsl  raytrace_voxels.glsl  sky_renderer.glsl  smooth_normals.glsl  taa.glsl  test_frag_depth.glsl  tonemapping.glsl  utils.glsl  voxel_ambient_lighting.glsl  voxel_direct_lighting.glsl  voxel_specular_lighting.glsl
src/voxo/: __main__.py  constants.py  debug.py  main.py  model.py  objects.py  render_test.py  rendering.py  scene.py  utils.py  voxel.py  voxel_rendering.py
